# C-_standard_lib_exercise

./: CMakeLists.txt
algorithm/: CMakeLists.txt
algorithm/for_each_algorithm/: CMakeLists.txt  main.cpp
algorithm/modifying_algorithm/: CMakeLists.txt
algorithm/mutating_algorithm/: CMakeLists.txt  main.cpp
algorithm/nonmodifying_algorithm/: CMakeLists.txt  main.cpp
algorithm/numeric_algorithm/: CMakeLists.txt
algorithm/removing_algorithm/: CMakeLists.txt
algorithm/sorted-Range_algorithm/: CMakeLists.txt
algorithm/sorting_algorithm/: CMakeLists.txt
container/: CMakeLists.txt
include/: printElem.h
iterator/: CMakeLists.txt
